--- a/MediaExtractor/App.config
+++ b/MediaExtractor/App.config
@@ -10,9 +10,6 @@
     </configSections>
     <applicationSettings>
         <MediaExtractor.Properties.Settings>
-            <setting name="Author" serializeAs="String">
-                <value>Raphael Stoeckli</value>
-            </setting>
             <setting name="Website" serializeAs="String">
                 <value>https://github.com/rabanti-github/Media-Extractor</value>
             </setting>
@@ -21,6 +18,9 @@
             </setting>
             <setting name="LargeFileThreshold" serializeAs="String">
                 <value>5242880</value>
+            </setting>
+            <setting name="Author" serializeAs="String">
+                <value>Raphael Stoeckli</value>
             </setting>
         </MediaExtractor.Properties.Settings>
     </applicationSettings>
@@ -42,16 +42,13 @@
                 <value>False</value>
             </setting>
             <setting name="Locale" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="ExtractSaveAll" serializeAs="String">
                 <value>False</value>
             </setting>
             <setting name="ExtractSaveSelected" serializeAs="String">
                 <value>False</value>
-            </setting>
-            <setting name="ImageExtensions" serializeAs="String">
-                <value>jpg,jpeg,png,wmf,emf,gif,bmp,ico,wdp,tif,tiff</value>
             </setting>
             <setting name="TextExtensions" serializeAs="String">
                 <value>asc,bas,bat,c,cfg,cmd,cpp,cs,css,csv,h,hex,htm,html,inc,inf,info,ini,java,js,json,kt,ktm,kts,latex,less,lisp,log,lst,lua,markdown,md,me,meta,mf,p,pas,php,pl,pp,ps,ps1,psm1,py,r,rb,readme,reg,rs,rst,sh,sln,sql,sty,tcl,tex,ts,tsx,txt,vb,vba,vbs,yaml,yml</value>
@@ -60,7 +57,7 @@
                 <value>xml,manifest,rels,xhtml,xaml,svg,pom,dtd,xsd,x3d,collada,cdxml,config,nuspec,graphml</value>
             </setting>
             <setting name="RecentFiles" serializeAs="String">
-                <value/>
+                <value />
             </setting>
             <setting name="DocumentGenericTextPreview" serializeAs="String">
                 <value>False</value>
@@ -84,8 +81,14 @@
                 <value>False</value>
             </setting>
             <setting name="ScreenName" serializeAs="String">
-                <value/>
+                <value />
+            </setting>
+            <setting name="Support" serializeAs="String">
+                <value>https://github.com/rabanti-github/Media-Extractor/issues</value>
+            </setting>
+            <setting name="ImageExtensions" serializeAs="String">
+                <value>jpg,jpeg,png,wmf,emf,gif,bmp,ico,wdp,tif,tiff</value>
             </setting>
         </MediaExtractor.Properties.Settings>
     </userSettings>
-<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.6.2"/></startup></configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.8"/></startup></configuration>
