--- a/InstallerBootstrap/InstallerBootstrap.csproj
+++ b/InstallerBootstrap/InstallerBootstrap.csproj
@@ -80,6 +80,7 @@
       <ProductName>.NET Framework 3.5 SP1</ProductName>
       <Install>false</Install>
     </BootstrapperPackage>
+    <Content Include="README.md" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
