--- a/MediaExtractor/MediaExtractor.csproj
+++ b/MediaExtractor/MediaExtractor.csproj
@@ -110,6 +110,11 @@
     <Compile Include="ExtractorItem.cs" />
     <Compile Include="I18N.cs" />
     <Compile Include="Preview.cs" />
+    <Compile Include="Properties\Resources.Designer.cs">
+      <DependentUpon>Resources.resx</DependentUpon>
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+    </Compile>
     <Compile Include="Properties\Resources.fr-FR.Designer.cs">
       <DependentUpon>Resources.fr-FR.resx</DependentUpon>
       <AutoGen>True</AutoGen>
@@ -120,10 +125,10 @@
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
     </Compile>
-    <Compile Include="Properties\Resources.Designer.cs">
+    <Compile Include="Properties\Resources.es-ES.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Resources.resx</DependentUpon>
+      <DependentUpon>Resources.es-ES.resx</DependentUpon>
     </Compile>
     <Compile Include="Properties\Resources.en.Designer.cs">
       <DependentUpon>Resources.en.resx</DependentUpon>
@@ -168,6 +173,10 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
+    <EmbeddedResource Include="Properties\Resources.resx">
+      <Generator>PublicResXFileCodeGenerator</Generator>
+      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.fr-FR.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.fr-FR.Designer.cs</LastGenOutput>
@@ -180,9 +189,9 @@
       <Generator>PublicResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.en.Designer.cs</LastGenOutput>
     </EmbeddedResource>
-    <EmbeddedResource Include="Properties\Resources.resx">
+    <EmbeddedResource Include="Properties\Resources.es-ES.resx">
       <Generator>PublicResXFileCodeGenerator</Generator>
-      <LastGenOutput>Resources.Designer.cs</LastGenOutput>
+      <LastGenOutput>Resources.es-ES.Designer.cs</LastGenOutput>
     </EmbeddedResource>
     <None Include="App.config" />
     <None Include="packages.config" />
@@ -212,15 +221,14 @@
   <PropertyGroup>
     <PostBuildEvent>cd $(TargetDir)
 del *.pdb
-if $(ConfigurationName) == Release (
-del *.xml
-)
+if $(ConfigurationName) == Release del *.xml
 xcopy "$(SolutionDir)LICENSE" "$(TargetDir)" /Y
 ren "$(TargetDir)LICENSE" license.txt
 xcopy "$(SolutionDir)Changelog.md" "$(TargetDir)" /Y
 ren "$(TargetDir)Changelog.md" changelog.txt
 
-"$(SolutionDir)InstallerBootstrap\bin\$(ConfigurationName)\InstallerBootstrap.exe" "$(SolutionDir)MediaExtractorInstaller\Templates\InstallScript.iss.TPL" "$(SolutionDir)MediaExtractorInstaller\InstallScript.iss" $(TargetDir) $(TargetFileName)</PostBuildEvent>
+"$(SolutionDir)InstallerBootstrap\bin\$(ConfigurationName)\InstallerBootstrap.exe" "$(SolutionDir)MediaExtractorInstaller\Templates\InstallScript.iss.TPL" "$(SolutionDir)MediaExtractorInstaller\InstallScript.iss" $(TargetDir) $(TargetFileName)
+</PostBuildEvent>
   </PropertyGroup>
   <PropertyGroup>
     <PreBuildEvent>rd /s /q "$(TargetDir)"</PreBuildEvent>
